--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -2,11 +2,15 @@ name: cache repo-report openssf score daily
 
 on:
   schedule:
-    - cron: "0 0 * * *"
+    - cron: "*/5 * * * *"
+  push:
+    - test
 
 jobs:
   steps:
-      - uses: actions/checkout@v2
-      - uses: Riyabelle25/repo-report-cache@main
-        with:
-          token: ${{ secrets.GITHUB_TOKEN }}
+    - uses: actions/checkout@v2
+    - uses: Riyabelle25/repo-report-cache@main
+      with:
+        token: ${{ secrets.GITHUB_TOKEN }}
+      run:
+        echo 'Testing!'
