--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -8,10 +8,11 @@ on:
       - 'test'
 
 jobs:
-  steps:
-    - uses: actions/checkout@v2
-    - uses: Riyabelle25/repo-report-cache@main
-      with:
-        token: ${{ secrets.GITHUB_TOKEN }}
-      run:
-        echo 'Testing!'
+  openssf:
+    steps:
+      - uses: actions/checkout@v2
+      - uses: Riyabelle25/repo-report-cache@main
+        with:
+          token: ${{ secrets.GITHUB_TOKEN }}
+        run:
+          echo 'Testing!'
