[action] fix yaml error

--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -9,6 +9,7 @@ on:
 
 jobs:
   openssf:
+    runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
       - uses: Riyabelle25/repo-report-cache@main
