--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -5,7 +5,7 @@ on:
     - cron: "0 0 1 1-12 *"
   #push:
   #  branches:
-  #    - 'main'
+  #    - main
 
 jobs:
   openssf:
@@ -19,3 +19,16 @@ jobs:
       - uses: ./
         with:
           token: ${{ secrets.TOKEN }}
+      - name: switching from HTTPS to SSH
+        run: git remote set-url origin git@github.com:ljharb/repo-report-cache.git
+      - name: check for changes
+        run: git status
+      - name: stage changed files
+        run: git add metadata-ossf-score.json
+      - name: commit changed files
+        run: git commit -m "[add] cache metadata-ossf-score.json" metadata-ossf-score.json
+      - name: Push changes
+        uses: ad-m/github-push-action@master
+        with:
+          github_token: ${{ secrets.TOKEN }}
+          branch: metadata
