--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
 	},
 	"dependencies": {
 		"@actions/core": "^1.6.0",
-		"@actions/github": "^5.0.1"
+		"@actions/github": "^5.0.1",
+		"@octokit/core": "^3.6.0"
 	}
 }
