--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -12,6 +12,6 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
-      - uses: Riyabelle25/repo-report-cache@main
+      - uses: ./
         with:
           token: ${{ secrets.GITHUB_TOKEN }}
