--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -14,7 +14,7 @@ jobs:
       CI: false
     steps:
       - uses: actions/checkout@v2
+      - run: npm ci
       - uses: ./
-        run: npm install
         with:
           token: ${{ secrets.GITHUB_TOKEN }}
