--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
 	"homepage": "https://github.com/ljharb/repo-report-cache#readme",
 	"devDependencies": {
 		"@ljharb/eslint-config": "^20.2.3",
+		"aud": "^2.0.0",
 		"eslint": "=8.8.0"
 	},
 	"dependencies": {
