clear out infra for the metadata-only branch

--- a/package.json
+++ b/package.json
@@ -20,13 +20,5 @@
 	"bugs": {
 		"url": "https://github.com/ljharb/repo-report-cache/issues"
 	},
-	"homepage": "https://github.com/ljharb/repo-report-cache#readme",
-	"devDependencies": {
-		"@ljharb/eslint-config": "^20.2.3",
-		"eslint": "=8.8.0"
-	},
-	"dependencies": {
-		"@actions/core": "^1.6.0",
-		"@actions/github": "^5.0.0"
-	}
+	"homepage": "https://github.com/ljharb/repo-report-cache#readme"
 }
